# dbd_exam

./: .gitignore  container_variables.env  docker-compose.data-processing.yml  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.main.yml  docker-compose.yml  readme.md  speedrun_plan.txt
backend/: .env.development  Cargo.toml  dockerfile
backend/migrations/2021-05-26-201539_create_people/: down.sql  up.sql
backend/migrations/2021-05-26-201550_create_universities/: down.sql  up.sql
backend/migrations/2021-05-26-201631_create_locations/: up.sql
backend/src/: error.rs  main.rs  schema.rs
backend/src/data_access/: meili_connection.rs  mod.rs  mongo_connection.rs  pg_connection.rs  redis_connection.rs
backend/src/entities/: mod.rs  shared_behaviour.rs
backend/src/entities/pg_entities/: location.rs  mod.rs  person.rs  university.rs
backend/src/logic/: caching.rs  mod.rs  search_handler.rs
backend/src/logic/entity_handlers/: location_handler.rs  mod.rs  person_handler.rs  university_handler.rs
backend/src/utils/: environment.rs
data_population/: .env.development  dockerfile  pyproject.toml  readme.md  requirements.txt  right.txt  setup.py
data_population/src/: cli.py  main.py
data_population/src/connection/: meili_connection.py  mongo_connection.py  pg_connection.py
data_population/src/logic/: __init__.py  location.pyx  meili_populate.pyx  mongo_populate.pyx  person.pyx  pg_populate.pyx  university.pyx
data_population/src/utils/: aliases.py  dummy_data_utils.py  environment.py
data_population/tests/: test_data_population.py
(+28 files in other folders)
