[package]
name = "backend"
version = "0.1.0"
authors = ["Apathy <none-of@your.business>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# primary
tokio = { version = "1", features = ["full"] }
warp = "0.3"
postgres="0.19.1"
diesel = {version="1.4.6", features= ["postgres", "r2d2", "chrono"]}
meilisearch-sdk = "0.8"
mongodb = "1.2.1"

# utils
chrono = {version="0.4", features= ["serde"]}
r2d2 = "0.8.9"
lazy_static = "1.4"
rust-argon2="0.8.3"
diesel_migrations="1.4.0"
futures = { version = "0.3", default-features = false, features = ["alloc"]}
dotenv = "0.15.0"
jsonwebtoken = "=7.2"
thiserror = "1.0.24"
tokio-test="0.4.2"
anyhow="1.0.40"

# Serde
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.125"

